--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,1 +1,8 @@
-<p>inicio works!</p>
+<div class="container-fluid">
+    <div class="jumbotron">
+        <h1 class="display-4">Bienvenido, Adminstrador.</h1>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, repellendus iste illum pariatur impedit ad blanditiis fuga commodi molestias dolorem accusantium? Explicabo facilis asperiores doloribus porro accusantium! Molestiae, necessitatibus
+            veritatis.
+        </p>
+    </div>
+</div>
