--- a/src/app/components/repartidores/repartidores.component.html
+++ b/src/app/components/repartidores/repartidores.component.html
@@ -1,5 +1,25 @@
 <div class="container-fluid table-responsive animated fadeIn fast">
-    <table class="table table-striped table-bordered table-hover">
+    <div class="row ">
+        <div class="col-md-12 text-center">
+            <h2>Busca a Tus Repartidores</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="input-group input-group-sm">
+                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <div class="input-group-append">
+                    <button class="btn btn-navbar" type="button">
+                  <i class="fas fa-search"></i>
+                </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+
+            <!-- <table class="table table-striped table-bordered table-hover">
         <thead class="thead-dark text-center">
             <tr>
                 <th scope="col" style="width: 5%;">ID</th>
@@ -47,84 +67,85 @@
                 </td>
             </tr>
         </tbody>
-    </table>
-
-    <div class="container-fluid">
-        <button type="button" class="btn btn-outline-success btn-block" data-toggle="modal" data-target="#modalEvento">
+    </table> -->
+        </div>
+        <br>
+        <div class="col-md-12">
+            <button type="button" class="btn btn-outline-success btn-block" data-toggle="modal" data-target="#modalEvento">
           + Agregar un Nuevo Repartidor
         </button>
+        </div>
     </div>
-</div>
 
-<div class="modal fade" id="modalEvento" tabindex="-1" role="dialog" aria-labelledby="modalEventoLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modalEventoLabel">Registrar Repartidor</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <div class="modal fade" id="modalEvento" tabindex="-1" role="dialog" aria-labelledby="modalEventoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalEventoLabel">Registrar Repartidor</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-            </div>
-            <div class="modal-body">
-                <form [formGroup]="formRepartidor" (ngSubmit)="guardarRepartidor()">
+                </div>
+                <div class="modal-body">
+                    <form [formGroup]="formRepartidor" (ngSubmit)="guardarRepartidor()">
 
-                    <div class="form-row mb-3">
-                        <div class="col-md-12">
-                            <label for="nombre">Nombre(s): <small class="text-danger">*</small></label>
-                            <input type="text" class="form-control" id="nombre" placeholder="Ingrese el/los Nombre(s) del Repartidor/a" formControlName="nombre" [class.is-invalid]="validacionNombre">
-                            <small *ngIf="validacionNombre" class="form-text text-danger">Nombre Obligatorio.</small>
+                        <div class="form-row mb-3">
+                            <div class="col-md-12">
+                                <label for="nombre">Nombre(s): <small class="text-danger">*</small></label>
+                                <input type="text" class="form-control" id="nombre" placeholder="Ingrese el/los Nombre(s) del Repartidor/a" formControlName="nombre" [class.is-invalid]="validacionNombre">
+                                <small *ngIf="validacionNombre" class="form-text text-danger">Nombre Obligatorio.</small>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-row mb-3">
-                        <div class="col-md-12">
-                            <label for="apellidoP">Apellido Paterno: <small class="text-danger">*</small></label>
-                            <input type="text" class="form-control" id="apellidoP" placeholder="Ingrese el Apellido Paterno del Repartidor/a" formControlName="apellidoP" [class.is-invalid]="validacionApellidoP">
-                            <small *ngIf="validacionApellidoP" class="form-text text-danger">Apellido Paterno Obligatorio.</small>
+                        <div class="form-row mb-3">
+                            <div class="col-md-12">
+                                <label for="apellidoP">Apellido Paterno: <small class="text-danger">*</small></label>
+                                <input type="text" class="form-control" id="apellidoP" placeholder="Ingrese el Apellido Paterno del Repartidor/a" formControlName="apellidoP" [class.is-invalid]="validacionApellidoP">
+                                <small *ngIf="validacionApellidoP" class="form-text text-danger">Apellido Paterno Obligatorio.</small>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-row mb-3">
-                        <div class="col-md-12">
-                            <label for="apellidoM">Apellido Materno: <small class="text-danger">*</small></label>
-                            <input type="text" class="form-control" id="apellidoM" placeholder="Ingrese el Apellido Materno del Repartidor/a" formControlName="apellidoM" [class.is-invalid]="validacionApellidoM">
-                            <small *ngIf="validacionApellidoM" class="form-text text-danger">Apellido Materno Obligatorio.</small>
+                        <div class="form-row mb-3">
+                            <div class="col-md-12">
+                                <label for="apellidoM">Apellido Materno: <small class="text-danger">*</small></label>
+                                <input type="text" class="form-control" id="apellidoM" placeholder="Ingrese el Apellido Materno del Repartidor/a" formControlName="apellidoM" [class.is-invalid]="validacionApellidoM">
+                                <small *ngIf="validacionApellidoM" class="form-text text-danger">Apellido Materno Obligatorio.</small>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-row mb-3">
-                        <div class="col-md-12">
-                            <label for="correo">Correo: <small class="text-danger">*</small></label>
-                            <input type="email" class="form-control" id="correo" placeholder="Ingrese el Correo del Repartidor/a" formControlName="correo" [class.is-invalid]="validacionCorreo">
-                            <small *ngIf="validacionCorreo" class="form-text text-danger">Correo Obligatorio.</small>
+                        <div class="form-row mb-3">
+                            <div class="col-md-12">
+                                <label for="correo">Correo: <small class="text-danger">*</small></label>
+                                <input type="email" class="form-control" id="correo" placeholder="Ingrese el Correo del Repartidor/a" formControlName="correo" [class.is-invalid]="validacionCorreo">
+                                <small *ngIf="validacionCorreo" class="form-text text-danger">Correo Obligatorio.</small>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-row mb-3">
-                        <div class="col-md-12">
-                            <label for="contra">Contraseña: <small class="text-danger">*</small></label>
-                            <input type="password" class="form-control" id="contra" placeholder="Ingrese la Contraseña del Repartidor/a" formControlName="contra" [class.is-invalid]="validacionContra">
-                            <small *ngIf="validacionContra" class="form-text text-danger">Contraseña Obligatoria.</small>
+                        <div class="form-row mb-3">
+                            <div class="col-md-12">
+                                <label for="contra">Contraseña: <small class="text-danger">*</small></label>
+                                <input type="password" class="form-control" id="contra" placeholder="Ingrese la Contraseña del Repartidor/a" formControlName="contra" [class.is-invalid]="validacionContra">
+                                <small *ngIf="validacionContra" class="form-text text-danger">Contraseña Obligatoria.</small>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-row mb-3">
-                        <div class="col-md-12">
-                            <label for="doc">Documentos de Registro: <small class="text-danger">*</small></label>
-                            <input type="file" accept=".pdf" id="docS" formControlName="documentacion" formControlName="documento">
-                            <small *ngIf="validacionDoc" class="form-text text-danger">Documentación Obligatoria.</small>
+                        <div class="form-row mb-3">
+                            <div class="col-md-12">
+                                <label for="doc">Documentos de Registro: <small class="text-danger">*</small></label>
+                                <input type="file" accept=".pdf" id="docS" formControlName="documentacion" formControlName="documento">
+                                <small *ngIf="validacionDoc" class="form-text text-danger">Documentación Obligatoria.</small>
+                            </div>
                         </div>
-                    </div>
 
-                    <hr>
+                        <hr>
 
-                    <div class="input-group form-row mb-3">
-                        <div class="col-md-12 text-center">
-                            <button class="btn btn-success" type="submit">Crear</button>
+                        <div class="input-group form-row mb-3">
+                            <div class="col-md-12 text-center">
+                                <button class="btn btn-success" type="submit">Crear</button>
+                            </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
