--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -1,46 +1,68 @@
 <div class="container-fluid table-responsive animated fadeIn fast">
-    <table class="table table-striped table-bordered table-hover">
-        <thead class="thead-dark text-center">
-            <tr>
-                <th scope="col" style="width: 5%;">ID</th>
-                <th scope="col" style="width: 30%;">Nombre</th>
-                <th scope="col" style="width: 20%;">Correo</th>
-                <th scope="col" style="width: 10%;">Acciones</th>
-            </tr>
-        </thead>
-        <tbody class="text-center">
-            <tr>
-                <th scope="row" class="align-middle">1</th>
-                <td class="align-middle">Nombre 1</td>
-                <td class="align-middle">correo@ejemplo.com</td>
-                <td class="align-middle">
-                    <button class="btn btn-danger" type="button">Eliminar</button>
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="align-middle">2</th>
-                <td class="align-middle">Nombre 2</td>
-                <td class="align-middle">correo@ejemplo.com</td>
-                <td class="align-middle">
-                    <button class="btn btn-danger" type="button">Eliminar</button>
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="align-middle">3</th>
-                <td class="align-middle">Nombre 3</td>
-                <td class="align-middle">correo@ejemplo.com</td>
-                <td class="align-middle">
-                    <button class="btn btn-danger" type="button">Eliminar</button>
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="align-middle">4</th>
-                <td class="align-middle">Nombre 4</td>
-                <td class="align-middle">correo@ejemplo.com</td>
-                <td class="align-middle">
-                    <button class="btn btn-danger" type="button">Eliminar</button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="row ">
+        <div class="col-md-12 text-center">
+            <h2>Busca a Tus Usuarios</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="input-group input-group-sm">
+                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <div class="input-group-append">
+                    <button class="btn btn-navbar" type="button">
+                      <i class="fas fa-search"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+
+            <!-- <table class="table table-striped table-bordered table-hover">
+          <thead class="thead-dark text-center">
+              <tr>
+                  <th scope="col" style="width: 5%;">ID</th>
+                  <th scope="col" style="width: 30%;">Nombre</th>
+                  <th scope="col" style="width: 20%;">Correo</th>
+                  <th scope="col" style="width: 10%;">Acciones</th>
+              </tr>
+          </thead>
+          <tbody class="text-center">
+              <tr>
+                  <th scope="row" class="align-middle">1</th>
+                  <td class="align-middle">Nombre 1</td>
+                  <td class="align-middle">correo@ejemplo.com</td>
+                  <td class="align-middle">
+                      <button class="btn btn-danger" type="button">Eliminar</button>
+                  </td>
+              </tr>
+              <tr>
+                  <th scope="row" class="align-middle">2</th>
+                  <td class="align-middle">Nombre 2</td>
+                  <td class="align-middle">correo@ejemplo.com</td>
+                  <td class="align-middle">
+                      <button class="btn btn-danger" type="button">Eliminar</button>
+                  </td>
+              </tr>
+              <tr>
+                  <th scope="row" class="align-middle">3</th>
+                  <td class="align-middle">Nombre 3</td>
+                  <td class="align-middle">correo@ejemplo.com</td>
+                  <td class="align-middle">
+                      <button class="btn btn-danger" type="button">Eliminar</button>
+                  </td>
+              </tr>
+              <tr>
+                  <th scope="row" class="align-middle">4</th>
+                  <td class="align-middle">Nombre 4</td>
+                  <td class="align-middle">correo@ejemplo.com</td>
+                  <td class="align-middle">
+                      <button class="btn btn-danger" type="button">Eliminar</button>
+                  </td>
+              </tr>
+          </tbody>
+      </table> -->
+        </div>
+    </div>
 </div>
