--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -1,4 +1,21 @@
 <div class="container-fluid table-responsive animated fadeIn fast">
+    <div class="row ">
+        <div class="col-md-12 text-center">
+            <h2>Busca a Tus Eventos</h2>
+        </div>
+    </div>
+    <div class="row mb-4">
+        <div class="col-md-12">
+            <div class="input-group input-group-sm">
+                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <div class="input-group-append">
+                    <button class="btn btn-navbar" type="button">
+              <i class="fas fa-search"></i>
+            </button>
+                </div>
+            </div>
+        </div>
+    </div>
     <table class="table table-striped table-bordered table-hover">
         <thead class="thead-dark text-center">
             <tr>
@@ -15,7 +32,7 @@
                 <td class="align-middle">5 Boletos.</td>
                 <td class="align-middle">
                     <button class="btn btn-primary" type="button" (click)="editarEvento()">Editar</button>
-                    <button class="btn btn-danger ml-4" type="button"> Eliminar</button>
+                    <button class="btn btn-danger ml-lg-2" type="button"> Eliminar</button>
                 </td>
             </tr>
             <tr>
@@ -24,7 +41,7 @@
                 <td class="align-middle">500 Boletos.</td>
                 <td class="align-middle">
                     <button class="btn btn-primary" type="button" (click)="editarEvento()">Editar</button>
-                    <button class="btn btn-danger ml-4" type="button"> Eliminar</button>
+                    <button class="btn btn-danger ml-lg-2" type="button"> Eliminar</button>
                 </td>
             </tr>
             <tr>
@@ -33,7 +50,7 @@
                 <td class="align-middle">Agotado.</td>
                 <td class="align-middle">
                     <button class="btn btn-primary" type="button" (click)="editarEvento()">Editar</button>
-                    <button class="btn btn-danger ml-4" type="button"> Eliminar</button>
+                    <button class="btn btn-danger ml-lg-2" type="button"> Eliminar</button>
                 </td>
             </tr>
             <tr>
@@ -42,7 +59,7 @@
                 <td class="align-middle">Agotado.</td>
                 <td class="align-middle">
                     <button class="btn btn-primary" type="button" (click)="editarEvento()">Editar</button>
-                    <button class="btn btn-danger ml-4" type="button"> Eliminar</button>
+                    <button class="btn btn-danger ml-lg-2" type="button"> Eliminar</button>
                 </td>
             </tr>
         </tbody>
@@ -104,12 +121,13 @@
                     </div>
 
                     <div class="input-group form-row mb-3">
-                        <div class="col-md-12">
-                            <label for="tipo">Tipo: <small class="text-danger">*</small></label>
-                            <select id="tipo" class="form-control" formControlName="tipo" [class.is-invalid]="validacionTipo">
-                                  <option value="evento">Evento</option>
-                                  <option value="fiesta">Fiesta</option>
-                                </select>
+                        <label for="tipo-col">Tipo: <small class="text-danger">*</small></label><br>
+                        <div class="col-md-12" id="tipo-col">
+                            <input type="radio" id="tipo1" value="F" formControlName="tipo" [class.is-invalid]="validacionTipo">
+                            <label for="tipo1" class="form-check-label"> Fiesta</label><br>
+
+                            <input type="radio" id="tipo2" value="E" formControlName="tipo" [class.is-invalid]="validacionTipo">
+                            <label for="tipo2" class="form-check-label"> Evento</label>
                             <small *ngIf="validacionTipo" class="form-text text-danger">Obligatorio.</small>
                         </div>
                     </div>
@@ -117,7 +135,8 @@
                     <div class="input-group form-row mb-3">
                         <div class="col-md-12">
                             <label for="enlaceEvento">Enlace:</label>
-                            <input type="text" class="form-control" id="enlaceEvento" placeholder="Ingrese el Enlace del Evento" formControlName="enlace">
+                            <input type="text" class="form-control" id="enlaceEvento" placeholder="Ingrese el Enlace del Evento" formControlName="enlace" [class.is-invalid]="validacionEnlace">
+                            <small *ngIf="validacionEnlace" class="form-text text-danger">Enlace Obligatorio.</small>
                         </div>
                     </div>
 
@@ -131,25 +150,34 @@
 
                     <div class="input-group form-row mb-3">
                         <div class="col-md-6">
-                            <label for="ordenImg">Orden de Img Principal: <small class="text-danger">*</small> <small>(Posición de imagen principal en el carousel de eventos)</small></label>
-                            <input type="number" class="form-control" id="ordenImg" min="0" step="1" value="0" formControlName="ordenImg" [class.is-invalid]="validacionOrden">
+                            <label for="ordenImg">Orden de Evento: <small class="text-danger">*</small> <small>(Posición de imagen principal en el carousel de eventos)</small></label>
+                            <input type="number" class="form-control" id="ordenImg" min="1" max="15" step="1" value="1" formControlName="ordenImg" [class.is-invalid]="validacionOrden">
                             <small *ngIf="validacionOrden" class="form-text text-danger">Orden Obligatorio.</small>
                         </div>
                     </div>
 
                     <div class="input-group form-row mb-3">
                         <div class="col-md-12">
-                            <label for="imgPrincipal">Imagen Principal (Carousel)<small class="text-danger">*</small></label>
+                            <label for="imgPrincipal">Imagen Principal del Evento<small class="text-danger">*</small></label>
                             <input type="file" id="imgPrincipal" accept=".jpg" (change)="imgPrincipal($event)" formControlName="imgPrincipal">
                             <small *ngIf="validacionImg" class="form-text text-danger">Imagen Principal Obligatoria.</small>
-                            <img [src]="urlPrincipal"><br/>
+                            <img [src]="urlPrincipal" height="200"><br/>
                         </div>
                     </div>
 
                     <div class="input-group form-row mb-3">
                         <div class="col-md-12">
-                            <label for="imgPrincipal">Imagenes del Evento:</label>
-                            <input type='file' (change)="multiImg($event)" multiple>
+                            <label for="imgPrincipal">Imagen de Carousel<small class="text-danger">*</small></label>
+                            <input type="file" id="imgPrincipal" accept=".jpg" (change)="imgCarousel($event)" formControlName="imgCarousel">
+                            <small *ngIf="validacionImgCarousel" class="form-text text-danger">Imagen de Carousel Obligatoria.</small>
+                            <img [src]="urlCarousel" height="200"><br/>
+                        </div>
+                    </div>
+
+                    <div class="input-group form-row mb-3">
+                        <div class="col-md-12">
+                            <label for="imgsEvento">Imagenes del Evento:</label>
+                            <input type='file' id="imgsEvento" accept=".jpg" (change)="multiImg($event)" multiple formControlName="imgsEvento">
                             <img *ngFor='let url of urls' [src]="url" height="200"><br/>
                         </div>
                     </div>
