--- a/src/app/components/publicaciones/publicaciones.component.html
+++ b/src/app/components/publicaciones/publicaciones.component.html
@@ -1,4 +1,21 @@
 <div class="container-fluid table-responsive animated fadeIn fast">
+    <div class="row ">
+        <div class="col-md-12 text-center">
+            <h2>Busca a Tus Publicaciones</h2>
+        </div>
+    </div>
+    <div class="row mb-4">
+        <div class="col-md-12">
+            <div class="input-group input-group-sm">
+                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <div class="input-group-append">
+                    <button class="btn btn-navbar" type="button">
+          <i class="fas fa-search"></i>
+        </button>
+                </div>
+            </div>
+        </div>
+    </div>
     <table class="table table-striped table-bordered table-hover">
         <thead class="thead-dark text-center">
             <tr>
@@ -43,4 +60,68 @@
             </tr>
         </tbody>
     </table>
+
+    <div class="container-fluid">
+        <button type="button" class="btn btn-outline-success btn-block" data-toggle="modal" data-target="#modalPublicacion">
+          + Crear una Publicación
+        </button>
+    </div>
+</div>
+
+<div class="modal fade" id="modalPublicacion" tabindex="-1" role="dialog" aria-labelledby="modalPublicacionLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalPublicacionLabel">Crear Publicación</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="formPublicaciones" (ngSubmit)="guardarPublicacion()">
+
+                    <div class="form-row mb-3">
+                        <div class="col-md-12">
+                            <label for="titulo">Título: <small class="text-danger">*</small></label>
+                            <input type="text" class="form-control" id="nombreEvento" placeholder="Ingrese el Titulo" formControlName="titulo" [class.is-invalid]="validacionTitulo">
+                            <small *ngIf="validacionTitulo" class="form-text text-danger">Título Obligatorio.</small>
+                        </div>
+                    </div>
+
+                    <div class="input-group form-row mb-3">
+                        <div class="col-md-12">
+                            <label for="descEvento">Cuerpo de Publicación: <small class="text-danger">*</small></label>
+                            <textarea id="descEvento" class="form-control" rows="5" formControlName="cuerpo" [class.is-invalid]="validacionCuerpo"></textarea>
+                            <small *ngIf="validacionCuerpo" class="form-text text-danger">Cuerpo de Publicación Obligatorio.</small>
+                        </div>
+                    </div>
+
+                    <div class="input-group form-row mb-3">
+                        <div class="col-md-12">
+                            <label for="principal">Imagen Principal: <small class="text-danger">*</small></label><br>
+                            <input type="file" id="principal" accept=".jpg" (change)="imgPrincipal($event)" formControlName="imgPrincipal">
+                            <small *ngIf="validacionImgPrincipal" class="form-text text-danger">Imagen Principal Obligatoria.</small>
+                            <img [src]="urlPrincipal" height="200"><br/>
+                        </div>
+                    </div>
+
+                    <div class="input-group form-row mb-3">
+                        <div class="col-md-12">
+                            <label for="imgsPublicacion">Imagenes de la Publicación:</label>
+                            <input type='file' id="imgsPublicacion" accept=".jpg" (change)="multiImg($event)" multiple formControlName="imgsPublicacion">
+                            <small *ngIf="validacionImgs" class="form-text text-danger">Imagen Principal Obligatoria.</small>
+                            <img *ngFor='let url of urls' [src]="url" height="200"><br/>
+                        </div>
+                    </div>
+                    <hr>
+
+                    <div class="input-group form-row mb-3">
+                        <div class="col-md-12 text-center">
+                            <button class="btn btn-success" type="submit">Crear</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
